<resources>
    <string name="app_name">Github</string>
    <string name="action_home">Home</string>
    <string name="action_notification">Notification</string>
    <string name="action_explore">Explore</string>
    <string name="action_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="settings">Settings</string>
    <string name="john_kartos">John Kartos</string>
    <string name="_84_888_553_682">+84 888 553 682</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="night_mode">Night Mode</string>
    <string name="log_out">Log Out</string>
    <string name="faqs">FAQs</string>
    <string name="about_us">About Us</string>
    <string name="send_us_a_message">Send Us a Message</string>
    <string name="languages">Languages</string>
    <string name="text_size">Text Size</string>
    <string name="security_amp_privacy"><![CDATA[Security & Privacy]]></string>
    <string name="private_account">Private Account</string>
    <string name="notifications">Notifications</string>
</resources>