<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SettingsFragment">

    <!--Action Bar-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_back2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_4"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/profile_pro" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Jotaro Kujo"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_84_888_553_682"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_back_secondary_100"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/edit_profile"
                android:textAllCaps="false"
                android:textColor="@color/primary" />
            <!--Part 1-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_white10_20"
                android:orientation="vertical"
                android:padding="15dp">

                <!--Night-Mode-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--Night-mode-->
                    <ImageView
                        android:id="@+id/nightModeIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_night_mode"
                        android:padding="12dp"
                        android:src="@drawable/ic_night_mode" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/nightModeIcon"
                        android:text="@string/night_mode"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp"
                        android:theme="@style/nightModeSwitch"
                        tools:ignore="TouchTargetSizeCheck" />
                </RelativeLayout>

                <!--Notifications-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <!--Night-mode-->
                    <ImageView
                        android:id="@+id/notificationIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_notifications"
                        android:padding="12dp"
                        android:src="@drawable/ic_notification" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/notificationIcon"
                        android:text="@string/notifications"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp"
                        android:theme="@style/notificationsSwitch"
                        tools:ignore="TouchTargetSizeCheck" />
                </RelativeLayout>


            </LinearLayout>

            <!--Part 2-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_white10_20"
                android:orientation="vertical"
                android:padding="15dp">

                <!--Security-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/securityIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/round_back_security"
                        android:padding="12dp"
                        android:src="@drawable/ic_security" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/securityIcon"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:paddingTop="15dp"
                        android:text="@string/security_amp_privacy"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </RelativeLayout>

                <!--Text Size-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/textSizeIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/round_back_night_mode"
                        android:padding="12dp"
                        android:src="@drawable/ic_text_size" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/textSizeIcon"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:paddingTop="15dp"
                        android:text="Text size"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </RelativeLayout>

                <!--Language-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/languageIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/round_back_notifications"
                        android:padding="12dp"
                        android:src="@drawable/ic_language" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/languageIcon"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:paddingTop="15dp"
                        android:text="Languages"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </RelativeLayout>
            </LinearLayout>

            <!--Part 3-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_white10_20"
                android:orientation="vertical"
                android:padding="15dp">

                <!--Send Us a Message-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/sendUsMessageIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/round_back_private_account"
                        android:padding="12dp"
                        android:src="@drawable/ic_message" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/sendUsMessageIcon"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:paddingTop="15dp"
                        android:text="Send us a message"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </RelativeLayout>

                <!--About Us-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/aboutUsIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/round_back_security"
                        android:padding="12dp"
                        android:src="@drawable/ic_about_us" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/aboutUsIcon"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:paddingTop="15dp"
                        android:text="About us"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </RelativeLayout>

                <!--FAQs-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/FAQsIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/round_back_night_mode"
                        android:padding="12dp"
                        android:src="@drawable/ic_faq" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/FAQsIcon"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:paddingTop="15dp"
                        android:text="FAQs"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>

            <!--Part 4-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_back_white10_20"
                android:orientation="vertical"
                android:padding="15dp">

                <!--Log Out-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/logOutIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/round_back_security"
                        android:padding="12dp"
                        android:src="@drawable/ic_logout" />

                    <Button
                        android:id="@+id/btn_log_out"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/logOutIcon"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:paddingTop="15dp"
                        android:text="Log out"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>